Validate map keys in C++ Mojo bindings

BUG=616649
TESTED=mojo_public_bindings_unittests

Review-Url: https://codereview.chromium.org/2036623002
Cr-Commit-Position: refs/heads/master@{#397955}

Former-commit-id: 29d59af2f65f5c8929521ba0f09e86ae75f26e63